--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "graphql-tag": "^2.9.2",
     "react": "^16.3.2",
     "react-apollo": "^2.1.3",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4"
   },
